option('clang-tidy-version', type : 'string', value : '', description : 'specify clang-tidy-version')
option('lto', type : 'boolean', value : false, description : 'override meson lto values for finer grained control')
option('time-report', type : 'boolean', value : false, description : 'generate time reports')
option('python-version', type : 'string', value : '', description : 'generate python bindings for version')
option('enable-tests', type : 'boolean', value : false, description : 'enable tests')
